--- a/static/stylesheets/login.css
+++ b/static/stylesheets/login.css
@@ -74,3 +74,18 @@ input[type=submit], select {
 input[type=submit]:hover {
     background-color: #2d4a87;
 }
+
+input[type=button], select {
+    width: 75%;
+    background-color: #3B5998;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=button]:hover {
+    background-color: #2d4a87;
+}
